...
                    child: Padding(
                      padding:
                          const EdgeInsets.only(left: 19, top: 50, right: 19),
                      child: Column(
                        crossAxisAlignment: CrossAxisAlignment.start,
                        children: [
                          const Text('Olá!',
                              style: TextStyle(
                                fontSize: 20,
                                fontWeight: FontWeight.w900,
                                fontFamily: 'Inter',
                                color: AppColors.green,
                              )),
...
                                      controller: controller.passwordController,
                                      isPasswordField: true,
                                      labelText: 'Senha',
                                    ),
                                    const SizedBox(height: 56),
                                    ButtonWidget(
                                      nameButton: 'ENTRAR',
                                      isLoading: controller.isLoading,
                                      onPressed: () =>
                                          controller.navigateToProfile(context),
                                    ),
                                    const SizedBox(height: 20),
                                    TextButton(
...
